[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
enpow = "2.0.2"
itertools = "0.12.0"
logos = "0.13.0"
