[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
enpow = "2.0.2"
enumflags2 = "0.7.8"
itertools = "0.12.0"
logos = "0.13.0"
nalgebra = "0.32.3"
ndarray = "0.15.6"
num = "0.4.1"
petgraph = "0.6.4"
pom = "3.3.0"
